add english translation

--- a/cleaning.html
+++ b/cleaning.html
@@ -8,8 +8,7 @@
   <meta name="description" content="Najbardziej efektywna z dostępnych na rynku technologia 3n solution czyszczenia urządzeń elektrycznych
 ">
 
-  <title>Cleaning of electrical appliances 3n Solutions
-  </title>
+  <title>Cleaning of electrical appliances 3n Solutions</title>
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -59,7 +58,7 @@
                     <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
@@ -294,7 +293,7 @@
             <figcaption class="services__wrapper__box-title">Thermovision 
               and electrical measurements</figcaption>
           </figure>
-          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="thermovision.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
       </div>
     </section>
