--- a/hydrodynamic-cleaning.html
+++ b/hydrodynamic-cleaning.html
@@ -8,8 +8,6 @@
   <meta name="description" content="Korzystamy technologię czyszczenia powierzchni z wykorzystaniem wysokich ciśnień, która pozwala szybko i skutecznie usuwać wszelkie zabrudzenia.">
   <title>Hydrodynamic cleaning 3n Solutions</title>
 
-  <!-- Google Fonts -->
-
   <!-- Style CSS -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -43,7 +41,7 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
                     <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
@@ -58,7 +56,7 @@
                     <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
@@ -242,7 +240,7 @@
             <figcaption class="services__wrapper__box-title">Thermovision 
               and electrical measurements</figcaption>
           </figure>
-          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="thermovision.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
