--- a/maintenance.html
+++ b/maintenance.html
@@ -9,7 +9,7 @@
   <title>Maintenance of electrical equipment 3n Solutions</title>
 
   <!-- Style CSS -->
-<!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
@@ -56,7 +56,7 @@
                     <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
@@ -279,7 +279,7 @@
             <figcaption class="services__wrapper__box-title">Thermovision 
               and electrical measurements</figcaption>
           </figure>
-          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="thermovision.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
       </div>
     </section>
