--- a/after-fire-cleaning.html
+++ b/after-fire-cleaning.html
@@ -56,35 +56,32 @@
                     <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="kontakt.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -243,7 +240,7 @@
             <figcaption class="services__wrapper__box-title">Thermovision 
               and electrical measurements</figcaption>
           </figure>
-          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="thermovision.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
       </div>
     </section>
