--- a/thermovision.html
+++ b/thermovision.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Kompleksowe wykonanie pomiarów instalacji elektro-energetycznych. Firma 3NS może również przeprowadzić niezależny audyt urządzeń elektrycznych w Państwa zakładach.">
-  <title>Pomiary termowizyjne i elektryczne 3n Solutions
+  <title>Thermovision and electrical measurements 3n Solutions
   </title>
 
   <!-- Style CSS -->
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 <!-- wrapper -->
@@ -45,52 +45,44 @@
                 <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="kontakt.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -142,8 +134,8 @@
     <section class="container">
       <div class="measurements__row measurements__row--1">
         <div class="measurements__col measurements__col--1">
-          <h2 class="measurements__col-title">Pomiary termowizyjne i elektryczne</h2>
-          <p class="measurements__col-text measurements__col-text--1">Oferujemy kompleksowe wykonanie pomiarów instalacji elektro-energetycznych. Firma 3NS może również przeprowadzić niezależny audyt / ocenę stanu urządzeń elektro-energetycznych w Państwa zakładach.</p>
+          <h2 class="measurements__col-title">Thermovision and electrical measurements</h2>
+          <p class="measurements__col-text measurements__col-text--1">We offer comprehensive measurements of power installations. As part of the service, we are able to prepare a report covering the analysis of the technical condition of components based on thermography and electrical measurements.</p>
         </div>
         <div class="measurements__col measurements__col--2">
           <div class="measurements__picture measurements__picture--1">
@@ -155,20 +147,21 @@
       </div>
 
       <div class="measurements__row measurements__row--2">
-        <p class="measurements__row-text measurements__row-text--1">W ramach usługi jesteśmy w stanie przygotować raport obejmujący analizę stanu
-          technicznego podzespołów na bazie pomiarów termowizyjnych oraz pomiarów elektrycznych obejmujących:</p>
+        <p class="measurements__row-text measurements__row-text--1">The performed measurements identify places of potential failures, 
+          giving the opportunity to plan an effective process of device maintenance. As part of our services, 
+          we also offer the ability to perform measurements after equipment maintenance to assess the effectiveness of performed maintenance work.</p>
       </div>
 
       <div class="measurements__row measurements__row--3">
         <div class="measurements__row-boxes">
-          <div class="measurements__row-box">Pomiary rezystencji
-            izolacji</div>
-          <div class="measurements__row-box">Pomiary
-            pętli zwarcia</div>
-          <div class="measurements__row-box">Pomiary uziemień
-            /instalacji odgromowych</div>
-          <div class="measurements__row-box">Pomiary wyłączników
-            różnicowo-prądowych</div>
+          <div class="measurements__row-box">Insulation resistance 
+            measurements</div>
+          <div class="measurements__row-box">Short circuit loop 
+            measurements</div>
+          <div class="measurements__row-box">PMeasurements of earthing 
+            / lightning protection systems</div>
+          <div class="measurements__row-box">Measurements of residual current 
+            circuit breakers</div>
         </div>
       </div>
     </section>
@@ -197,7 +190,7 @@
   <!-- services -->
   <section class="services">
     <section class="container">
-      <h2 class="services__title">Nasze usługi</h2>
+      <h2 class="services__title">Our services</h2>
       <div class="services__wrapper">
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -209,7 +202,7 @@
             <figcaption class="services__wrapper__box-title">Czyszczenie urządzeń
               elektrycznych</figcaption>
           </figure>
-          <a href="czyszczenie.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="cleaning.html" role="button" class="services__wrapper__box-btn">Więcej</a>
         </div>
 
         <div class="services__wrapper__box">
@@ -222,7 +215,7 @@
             <figcaption class="services__wrapper__box-title">Czyszczenie
               hydrodynamiczne</figcaption>
           </figure>
-          <a href="czyszczenie-hydrodynamiczne.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="hydrodynamic-cleaning.html" role="button" class="services__wrapper__box-btn">Więcej</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -234,7 +227,7 @@
             <figcaption class="services__wrapper__box-title">Konserwacja urządzeń
               elektroenergetycznych</figcaption>
           </figure>
-          <a href="konserwacja.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="maintenance.html" role="button" class="services__wrapper__box-btn">Więcej</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -246,7 +239,7 @@
             <figcaption class="services__wrapper__box-title">Czyszczenie
               popożarowe</figcaption>
           </figure>
-          <a href="czyszczenie-pozarowe.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="after-fire-cleaning.html" role="button" class="services__wrapper__box-btn">Więcej</a>
         </div>
       </div>
     </section>
