add english translation

--- a/thermovision.html
+++ b/thermovision.html
@@ -159,9 +159,10 @@
             measurements</div>
           <div class="measurements__row-box">Short circuit loop 
             measurements</div>
-          <div class="measurements__row-box">PMeasurements of earthing 
+          <div class="measurements__row-box">Measurements of earthing 
             / lightning protection systems</div>
-          <div class="measurements__row-box">Measurements of residual current 
+          <div class="measurements__row-box">Measurements of 
+            residual current 
             circuit breakers</div>
         </div>
       </div>
