add english translation

--- a/thermovision.html
+++ b/thermovision.html
@@ -159,8 +159,9 @@
             measurements</div>
           <div class="measurements__row-box">Short circuit loop 
             measurements</div>
-          <div class="measurements__row-box">Measurements of earthing 
-            / lightning protection systems</div>
+          <div class="measurements__row-box">Measurements of 
+            earthing / lightning 
+            protection systems</div>
           <div class="measurements__row-box">Measurements of 
             residual current 
             circuit breakers</div>
@@ -179,9 +180,9 @@
             </div>
           </div>
           <div class="measurements__col measurements__col--4">
-            <p class="measurements__col-text measurements__col-text--2">Wykonywane pomiary identyfikują miejsca potencjalnych awarii i dają możliwość zaplanowania efektywnego procesu konserwacji urządzeń. W ramach prowadzonych przez nas usług oferujemy również możliwość wykonania pomiarów po konserwacji urządzeń by ocenić skuteczność prowadzonych prac przeglądowych. Oferujemy klientom okresową współpracę na bazie stałej umowy lub możliwość wykonania pomiarów na bazie jednorazowych zleceń.
-
-              Pomiary wykonujemy z wykorzystaniem najnowocześniejszego sprzętu termowizyjnego oraz mierników elektrycznych. Nasi specjaliści posiadają odpowiednie uprawnienia do wykonywania pomiarów.</p>
+            <p class="measurements__col-text measurements__col-text--2">We offer clients periodic cooperation on the basis of a permanent contract or the ability to perform measurements based on one-off orders.
+              
+              The 3N Solutions company also carries out independent audits/assessment of the condition of electrical power equipment in your plants.</p>
           </div>
         </div>
       </section>
@@ -201,10 +202,10 @@
               <source srcset="images/img__2.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__2.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie urządzeń
-              elektrycznych</figcaption>
+            <figcaption class="services__wrapper__box-title">Cleaning of electrical 
+              appliances</figcaption>
           </figure>
-          <a href="cleaning.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
 
         <div class="services__wrapper__box">
@@ -214,10 +215,10 @@
               <source srcset="images/img__3.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__3.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie
-              hydrodynamiczne</figcaption>
+            <figcaption class="services__wrapper__box-title">Hydrodynamic 
+              cleaning</figcaption>
           </figure>
-          <a href="hydrodynamic-cleaning.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="hydrodynamic-cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -226,10 +227,10 @@
               <source srcset="images/img__6.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__6.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Konserwacja urządzeń
-              elektroenergetycznych</figcaption>
+            <figcaption class="services__wrapper__box-title">Maintenance of electrical 
+              equipment</figcaption>
           </figure>
-          <a href="maintenance.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="maintenance.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -238,10 +239,10 @@
               <source srcset="images/img__4.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__4.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie
-              popożarowe</figcaption>
+            <figcaption class="services__wrapper__box-title">After-fire 
+              cleaning</figcaption>
           </figure>
-          <a href="after-fire-cleaning.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="after-fire-cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
       </div>
     </section>
